--- a/OpenNetworkStatus/Views/Status/Index.cshtml
+++ b/OpenNetworkStatus/Views/Status/Index.cshtml
@@ -1,29 +1,19 @@
 ﻿@model OpenNetworkStatus.Models.StatusViewModel
 @{
     ViewData["Title"] = "Status";
-    
-    var statusClass = Model.Status switch
-    {
-        SiteStatus.AllOperational             => "status-green",
-        SiteStatus.SystemPerformanceImpacted  => "status-orange",
-        SiteStatus.PartialSystemIssues        => "status-dark-orange",
-        SiteStatus.MajorSystemIssues          => "status-red",
-        _                                     => "status-red"
-    };
-    
 }
 
-<div class="notification @statusClass">@Model.SiteStatusText</div>
+<partial name="Partial/_SiteStatus" model="@Model.SiteStatus"/>
 
 <div class="component-container">    
     @foreach (var component in Model.Components)
     {
-        <partial name="_Component" model="component"/>
+        <partial name="Partial/_Component" model="component"/>
     }
     
     @foreach (var component in Model.ComponentGroups)
     {
-        <partial name="_ComponentGroup" model="component"/>
+        <partial name="Partial/_ComponentGroup" model="component"/>
     }
 </div>
 
@@ -34,7 +24,7 @@
     <div class="metric-container">    
         @foreach (var metric in Model.Metrics)
         {
-            <partial name="_Metric" model="metric"/>
+            <partial name="Partial/_Metric" model="metric"/>
         }
     </div>
 }
@@ -44,18 +34,7 @@
 <div class="incident-container">
     @foreach (var day in Model.StatusDays)
     {
-        <div class="incident-day">
-            <h2 class="incident-day-title title is-5">@day.Date.ToString("MMM dd, yyyy")</h2>
-            @foreach (var incident in day.Incidents)
-            {
-                <partial name="_Incident" model="incident"/>
-            }
-            
-            @if (!day.Incidents.Any())
-            {
-                <span>No incidents reported.</span>
-            }
-        </div>
+        <partial name="Partial/_StatusDay" model="day"/>
     }
 </div>
 
