--- a/OpenNetworkStatus/Views/_ViewImports.cshtml
+++ b/OpenNetworkStatus/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using OpenNetworkStatus
-@using OpenNetworkStatus.Models
 @using OpenNetworkStatus.Services
+@using OpenNetworkStatus.Models
+@using OpenNetworkStatus.Models.Enums
+@using OpenNetworkStatus.Data.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
