--- a/OpenNetworkStatus/wwwroot/css/main.css
+++ b/OpenNetworkStatus/wwwroot/css/main.css
@@ -190,6 +190,11 @@ strong, .title {
     margin-bottom: 1rem;
 }
 
+.incident-container .incident-day .incident-container:not(:first-of-type) {
+    margin-top: 30px;
+}
+
+
 .incident-container .incident-day .incident-day-title {
     border: 0 solid #E0E0E0;
     border-bottom-width: 1px;
