--- a/OpenNetworkStatus/Views/Status/Partial/_Component.cshtml
+++ b/OpenNetworkStatus/Views/Status/Partial/_Component.cshtml
@@ -1,5 +1,5 @@
 @model OpenNetworkStatus.Data.Entities.Component
 
 <div class="tile component-container component-border">
-    <partial name="_InnerComponent" model="@Model"/>
+    <partial name="Partial/_InnerComponent" model="@Model"/>
 </div>
