--- a/OpenNetworkStatus/Views/Status/Partial/_Incident.cshtml
+++ b/OpenNetworkStatus/Views/Status/Partial/_Incident.cshtml
@@ -1,15 +1,15 @@
 @model OpenNetworkStatus.Data.Entities.Incident
 
-<div class="incident-container" data-js-hook="incident" data-incident-id="@Model.Id">
+<div class="incident-container" data-js-hook="incident" data-incident-id="@Model.Id" data-incident-impact="@Model.Impact">
     <h3 class="incident-title title is-5">@Model.Title</h3>
     
     <div class="incident-updates" data-incident-updates="">
-        @foreach(var update in Model.Updates.OrderByDescending(x => x.CreatedOn))
+        @foreach(var update in Model.Updates.OrderByDescending(x => x.CreatedAt))
         {
             <div class="incident-update" data-incident-update-id="@update.Id">
                 <strong>@EnumTextService.GetIncidentStatus(update.Status)</strong> - @update.Message
                 <br>
-                <small>@update.CreatedOn.ToString("MMM dd, HH:mm")</small>
+                <small>@update.CreatedAt.ToString("MMM dd, HH:mm") UTC</small>
             </div>
         }
     </div>
