--- a/OpenNetworkStatus/wwwroot/css/main.css
+++ b/OpenNetworkStatus/wwwroot/css/main.css
@@ -1,22 +1,34 @@
 ﻿:root {
-    --main-color: #737F8D;
-    --status-green: #43b581;
-    --status-orange: #faa61a;
-    --status-dark-orange: #fa890b;
-    --status-red: #fa563a;
+    --main-border: #E0E0E0;
+    --main-text: #737F8D;
+    --secondary-text: #99aab5;
+    --status-operational: #43b581;
+    --status-performance-issue: #faa61a;
+    --status-partial-outage: #fa890b;
+    --status-major-outage: #fa563a;
+    --chart-line: #7a7a7a;
+    --chart-ticks: #99aab5;
 }
 
 body {
-    color: var(--main-color);
+    color: var(--main-text);
 }
 
 small {
-    color: #99aab5;
+    color: var(--secondary-text);
     font-size: 0.85rem;
 }
 
 strong, .title {
-    color: var(--main-color);
+    color: var(--main-text);
+}
+
+[data-tooltip]:not(.is-disabled).has-tooltip-right.has-tooltip-arrow:after, [data-tooltip]:not(.is-loading).has-tooltip-right.has-tooltip-arrow:after, [data-tooltip]:not([disabled]).has-tooltip-right.has-tooltip-arrow:after {
+    margin: auto -5px -6px auto;
+}
+
+[data-tooltip]:not(.is-disabled).has-tooltip-right:before, [data-tooltip]:not(.is-loading).has-tooltip-right:before, [data-tooltip]:not([disabled]).has-tooltip-right:before {
+    display: inline-table;
 }
 
 @media only screen and (min-width: 600px) {
@@ -27,22 +39,22 @@ strong, .title {
 }
 
 .notification.status-green {
-    background-color: var(--status-green);
+    background-color: var(--status-operational);
     color: #fff;
 }
 
 .notification.status-orange {
-    background-color: var(--status-orange);
+    background-color: var(--status-performance-issue);
     color: #fff;
 }
 
 .notification.status-dark-orange {
-    background-color: var(--status-dark-orange);
+    background-color: var(--status-partial-outage);
     color: #fff;
 }
 
 .notification.status-red {
-    background-color: var(--status-red);
+    background-color: var(--status-major-outage);
     color: #fff;
 }
 
@@ -67,6 +79,7 @@ strong, .title {
 
 .component-container .component-children .inner-container .component-name {
     font-weight: 400;
+    line-height: 1.4;
 }
 
 .component-container.component-group > .inner-container {
@@ -105,19 +118,19 @@ strong, .title {
 }
 
 .component-status.status-green {
-    color: var(--status-green);
+    color: var(--status-operational);
 }
 
 .component-status.status-orange {
-    color: var(--status-orange);
+    color: var(--status-performance-issue);
 }
 
 .component-status.status-dark-orange {
-    color: var(--status-dark-orange);
+    color: var(--status-partial-outage);
 }
 
 .component-status.status-red {
-    color: var(--status-red);
+    color: var(--status-major-outage);
 }
 
 .component-container .component-border, .metric-container .metric-border {
@@ -125,7 +138,7 @@ strong, .title {
     border-left-width: 1px !important;
     border-right-width: 1px;
     border-top-width: 0px;
-    border-color: #E0E0E0;
+    border-color: var(--main-border);
     padding: 1.1rem 1.25rem 1rem;
     border-style: solid;
 }
@@ -156,7 +169,7 @@ strong, .title {
 }
 
 .page-title {
-    margin-top: 80px;
+    margin-top: 65px;
 }
 
 .metric-container .metric-chart-container {
@@ -194,9 +207,8 @@ strong, .title {
     margin-top: 30px;
 }
 
-
 .incident-container .incident-day .incident-day-title {
-    border: 0 solid #E0E0E0;
+    border: 0 solid var(--main-border);
     border-bottom-width: 1px;
     padding-bottom: 8px;
     margin-bottom: 0.6rem;
