Refactoring and auth

--- a/OpenNetworkStatus/Views/Shared/_Layout.cshtml
+++ b/OpenNetworkStatus/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <partial name="_Favicons" />
+
     <title>@ViewBag.Title | @OptionsAccessor.CurrentValue.Name</title>
 
     <link rel="stylesheet" media="screen" href="//cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
