--- a/OpenNetworkStatus/Views/Shared/_Layout.cshtml
+++ b/OpenNetworkStatus/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" media="screen" href="//cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
     <link rel="stylesheet" media="screen" href="//cdn.jsdelivr.net/npm/@@creativebulma/bulma-tooltip@1.0.2/dist/bulma-tooltip.min.css" />
-    <link rel="stylesheet" media="screen" href="/css/main.css" />
+    <link rel="stylesheet" media="screen" href="~/css/main.css" />
 </head>
 <body>
     <section class="section">
@@ -28,10 +28,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@1.1.4/dist/chartjs-plugin-crosshair.min.js" integrity="sha256-RXqOU/0mfSr0g02o6n6YoaVohdmh066i82b42w8dUVw=" crossorigin="anonymous"></script>
-    <script type="module" src="//unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule="" src="//unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
+    <script src="//unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
     
-    <script src="/js/main.js"></script>
+    <script src="~/js/main.js"></script>
 
     @await RenderSectionAsync("Scripts", false)
 </body>
