Powered by + Chart min/max

--- a/OpenNetworkStatus/Views/Shared/_Layout.cshtml
+++ b/OpenNetworkStatus/Views/Shared/_Layout.cshtml
@@ -24,6 +24,11 @@
             @RenderBody()
         </div>
     </section>
+    <section class="section">
+        <div class="container is-size-7">
+            Powered by <a class="has-text-grey-dark" href="https://github.com/patrickfnielsen/OpenNetworkStatus" target="_blank">OpenNetworkStatus</a>
+        </div>
+    </section>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
