--- a/OpenNetworkStatus/Views/Error/Code.cshtml
+++ b/OpenNetworkStatus/Views/Error/Code.cshtml
@@ -1,29 +1,24 @@
 @model ErrorViewModel
 @{
     ViewBag.Title = Model.StatusCode;
-    var returnUrl = @Context.Request.Query["returnurl"];
 }
 
-<section class="content">
-    <div class="error-page">
-        <h2 class="headline text-danger">@Model.StatusCode</h2>
+    <section class="content">
+        <h2 class="has-text-danger">@Model.StatusCode</h2>
 
         <div class="error-content">
-            <h3><i class="fas fa-exclamation-triangle text-danger"></i> @Model.Title</h3>
+            <h3>@Model.Title</h3>
 
             <p>
                 @Model.Message
-                Click <a href="@returnUrl"> here</a> to return to the last page
+                Click <a onclick="history.go(-1);"> here</a> to return to the last page.
             </p>
 
             <p class="debug-information">
-                @if (Model.ShowRequestId)
+               @if (Model.ShowRequestId)
                 {
-                    <p>
-                        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-                    </p>
+                    <strong>Request ID:</strong> <code>@Model.RequestId</code>
                 }
             </p>
         </div>
-    </div>
-</section>
+    </section>
