Initial support for linking using ids

--- a/OpenNetworkStatus/Views/Status/Partial/_Component.cshtml
+++ b/OpenNetworkStatus/Views/Status/Partial/_Component.cshtml
@@ -1,5 +1,5 @@
 @model OpenNetworkStatus.Data.Entities.Component
 
-<div class="tile component-container component-border">
+<div class="tile component-container component-border" id="component-@Model.Id">
     <partial name="Partial/_InnerComponent" model="@Model"/>
 </div>
