--- a/OpenNetworkStatus/Views/Status/Index.cshtml
+++ b/OpenNetworkStatus/Views/Status/Index.cshtml
@@ -6,7 +6,7 @@
 
 <partial name="Partial/_SiteStatus" model="@Model.SiteStatus" />
 
-<div class="component-container">
+<div id="components" class="component-container">
     @foreach (var component in Model.Components)
     {
         <partial name="Partial/_Component" model="component" />
@@ -20,7 +20,7 @@
 
 @if (Model.Metrics.Any())
 {
-    <div class="metric-timespan-container page-title">
+    <div id="metrics" class="metric-timespan-container page-title">
         <h1 class="title is-6">SYSTEM METRICS</h1>
         <div class="buttons has-addons">
             <a class="button is-small is-selected" data-js-hook="metric-timespan" data-timespan="day">Day</a>
@@ -35,7 +35,7 @@
     </div>
 }
 
-<h1 class="page-title title is-6">INCIDENTS</h1>
+<h1 id="incidents" class="page-title title is-6">INCIDENTS</h1>
 
 <div class="incident-container">
     @foreach (var day in Model.StatusDays)
