--- a/OpenNetworkStatus/Views/Shared/_Favicons.cshtml
+++ b/OpenNetworkStatus/Views/Shared/_Favicons.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
     var favicon = string.IsNullOrEmpty(ViewData["StatusIcon"]?.ToString()) ? "favicon-operational.ico" : ViewData["StatusIcon"];
 }
-<link rel="icon" type="image/x-icon" href="@favicon">
-<link rel="shortcut icon" type="image/x-icon" href="@favicon">
+<link rel="icon" type="image/x-icon" href="/@favicon">
+<link rel="shortcut icon" type="image/x-icon" href="/@favicon">
