Project + admin css

--- a/OpenNetworkStatus/Views/Shared/_AdminLayout.cshtml
+++ b/OpenNetworkStatus/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -18,35 +18,33 @@
         <div class="columns is-mobile">
             <div class="column is-menu">
                 <aside class="menu shadow-box">
-                            <p class="menu-label">
-                                General
-                            </p>
-                            <ul class="menu-list">
-                                <li >
-                                    <a class="is-active">Dashboard</a>
-                                </li>
-                                <li>
-                                    <a>Components</a>
-                                </li>
-                                <li>
-                                    <a>Metrics</a>
-                                </li>
-                                <li>
-                                    <a>Incidents</a>
-                                </li>
-                            </ul>
-                            <p class="menu-label">
-                                Administration
-                            </p>
-                            <ul class="menu-list">
-                                <li>
-                                    <a>Site Settings</a>
-                                </li>
-                                <li>
-                                    <a>Authentication</a>
-                                </li>
-                            </ul>
-                        </aside>
+                    <p class="menu-label">
+                        General
+                    </p>
+                    <ul class="menu-list">
+                        <li>
+                            <a class="is-active">Dashboard</a>
+                        </li>
+                        <li>
+                            <a>Components</a>
+                        </li>
+                        <li>
+                            <a>Metrics</a>
+                        </li>
+                        <li>
+                            <a>Incidents</a>
+                        </li>
+                    </ul>
+
+                    <p class="menu-label">
+                        System
+                    </p>
+                    <ul class="menu-list">
+                        <li>
+                            <a>Accounts</a>
+                        </li>
+                    </ul>
+                </aside>
             </div>
             <div class="column">
                 <div class="shadow-box">
@@ -68,8 +66,6 @@
 
 <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-
-<script src="/js/main.js"></script>
 
 @await RenderSectionAsync("Scripts", false)
 </body>
