Added support for two columns for components

--- a/OpenNetworkStatus/Views/_ViewImports.cshtml
+++ b/OpenNetworkStatus/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using OpenNetworkStatus.Services
 @using OpenNetworkStatus.Models
 @using OpenNetworkStatus.Models.Enums
+@using OpenNetworkStatus.Models.Options
 @using OpenNetworkStatus.Data.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
