--- a/OpenNetworkStatus/Views/Status/Index.cshtml
+++ b/OpenNetworkStatus/Views/Status/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model OpenNetworkStatus.Models.StatusViewModel
+@inject Microsoft.Extensions.Options.IOptions<SiteOptions> SiteOptions
 @{
     ViewData["Title"] = "Status";
     ViewData["StatusIcon"] = EnumTextService.GetSiteStatusIcon(Model.SiteStatus.Status);
@@ -6,7 +7,7 @@
 
 <partial name="Partial/_SiteStatus" model="@Model.SiteStatus" />
 
-<div id="components" class="component-container">
+<div id="components" class="component-container @(SiteOptions.Value.TwoColumns == true ? "two-columns" : "" )">
     @foreach (var component in Model.Components)
     {
         <partial name="Partial/_Component" model="component" />
@@ -46,10 +47,8 @@
 
 @section Scripts
 {
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
+    <script>document.addEventListener("DOMContentLoaded", function () {
             Status.Metric.init();
             Status.Collapsible.init();
-        });
-    </script>
+        });</script>
 }
