Fixed formatting of script tag..

--- a/OpenNetworkStatus/Views/Status/Index.cshtml
+++ b/OpenNetworkStatus/Views/Status/Index.cshtml
@@ -47,8 +47,10 @@
 
 @section Scripts
 {
-    <script>document.addEventListener("DOMContentLoaded", function () {
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
             Status.Metric.init();
             Status.Collapsible.init();
-        });</script>
+        });
+    </script>
 }
